tracking.js VueTrackFaces added; multiple faces added

--- a/index-template.html
+++ b/index-template.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue-detect-faces</title>
-    <!-- <script src="face-api.js"></script> -->
+    <script src="static/js/tracking-min.js"></script>
+    <script src="static/js/face-min.js"></script>
   </head>
   <body>
     <div id="app"></div>
